<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Tel">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"

        >


        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-50dp"
            android:layout_marginRight="5dp"
            android:background="@color/phone"
            android:drawableRight="@drawable/personel"
            android:ems="10"
            android:textColor="@color/yazi"
            android:hint="@string/user_name"
            android:inputType="text"
            android:maxLength="10"
            android:padding="15dp"
            android:textColorHint="@color/hint" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/phone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:textColor="@color/yazi" />

            <EditText
                android:id="@+id/alan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/Traans"
                android:inputType="phone"
                android:maxLength="2"
                android:text="90"
                android:textColor="@color/yazi" />

            <EditText
                android:id="@+id/numara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/Traans"
                android:drawableRight="@drawable/phone"
                android:ems="10"
                android:hint="@string/num"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="10dp"
                android:textColor="@color/yazi"
                android:textColorHint="@color/hint" />

        </LinearLayout>


        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@color/Edittext"
            android:text="@string/giris1"
            android:textSize="20dp"
            android:textColor="@color/yazi" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/sms_mesage"
        android:textColor="@color/yazi"
        android:textSize="18dp" />
</FrameLayout>